# services/abysscore/internal/adapters/controller/http/handlers/authentication.go
@@ -30,11 +30,11 @@ func NewAuthenticationHandler(
 // @Produce json
 // @Param request body request.AuthenticationRequest true "User registration details"
 // @Success 200 {object} domainservice.AuthenticationResult "User successfully registered"
+// @Failure 400 {object} examples.BadRequestResponse "Bad request - missed request fields"
 // @Failure 409 {object} examples.UsernameConflictResponse "Conflict - user with this username already exists"
 // @Failure 409 {object} examples.HardwareIDConflictResponse "Conflict - only one account per device allowed"
-// @Failure 422 {object} examples.UnprocessableEntityResponse "Unprocessable entity - validation error"
+// @Failure 422 {object} examples.UnprocessableEntityResponse "Unprocessable entity - invalid request types"
 // @Failure 429 {object} examples.TooManyRequestsResponse "Too many requests - received too many auth requests"
-// @Failure 500 {object} base.ErrorResponse "Internal server error"
 // @Router /api/auth/register [post]
 func (a *AuthenticationHandler) Register(c *fiber.Ctx) error {
 	ctx := c.UserContext()
@@ -63,12 +63,13 @@ func (a *AuthenticationHandler) Register(c *fiber.Ctx) error {
 // @Produce json
 // @Param request body request.AuthenticationRequest true "User login credentials"
 // @Success 200 {object} domainservice.AuthenticationResult "Successfully authenticated"
+// @Failure 400 {object} examples.BadRequestResponse "Bad request - missed request fields"
 // @Failure 401 {object} examples.UserWrongPasswordResponse "Unauthorized - wrong password"
 // @Failure 401 {object} examples.UserWrongHardwareIDResponse "Unauthorized - wrong hardware id"
 // @Failure 404 {object} examples.UserNotFoundResponse "Not found - user with this username not found"
 // @Failure 409 {object} examples.UsernameConflictResponse "Conflict - user with this username already exists"
 // @Failure 409 {object} examples.HardwareIDConflictResponse "Conflict - only one account per device allowed"
-// @Failure 422 {object} examples.UnprocessableEntityResponse "Unprocessable entity - validation error"
+// @Failure 422 {object} examples.UnprocessableEntityResponse "Unprocessable entity - invalid request types"
 // @Failure 429 {object} examples.TooManyRequestsResponse "Too many requests - received too many auth requests"
 // @Router /api/auth/login [post]
 func (a *AuthenticationHandler) Login(c *fiber.Ctx) error {
@@ -98,9 +99,10 @@ func (a *AuthenticationHandler) Login(c *fiber.Ctx) error {
 // @Produce json
 // @Param request body request.PasswordChangeRequest true "Password change details"
 // @Success 200 {object} domainservice.AuthenticationResult "Password successfully changed"
+// @Failure 400 {object} examples.BadRequestResponse "Bad request - missed request fields"
 // @Failure 401 {object} examples.UserWrongPasswordResponse "Unauthorized - wrong password"
 // @Failure 404 {object} examples.UserNotFoundResponse "Not found - user with this username not found"
-// @Failure 422 {object} examples.UnprocessableEntityResponse "Unprocessable entity - validation error"
+// @Failure 422 {object} examples.UnprocessableEntityResponse "Unprocessable entity - invalid request types"
 // @Failure 429 {object} examples.TooManyRequestsResponse "Too many requests - received too many auth requests"
 // @Router /api/auth/change_password [post]
 func (a *AuthenticationHandler) ChangePassword(c *fiber.Ctx) error {
